Added support to create a new resource when opening the editor.